# NexusDumper

./: .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix
dumpcs-gen/: Cargo.toml
dumpcs-gen/src/: lib.rs
dumper/: Cargo.toml
dumper/src/: lib.rs  util.rs
il2cpp/: Cargo.toml
il2cpp/src/: ffi.rs  lib.rs  util.rs
il2cpp/src/vm/: array.rs  assembly.rs  attributes.rs  class.rs  domain.rs  exception.rs  field.rs  image.rs  method.rs  mod.rs  object.rs  string.rs
launcher/: Cargo.toml
launcher/src/: main.rs
