[package]
name = "dumper"
edition.workspace = true
version.workspace = true

[lib]
name = "parayaya"
crate-type = ["cdylib"]

[dependencies]
windows = { workspace = true, features = [
	"Win32_Foundation",
	"Win32_System_SystemServices",
	"Win32_System_LibraryLoader",
	"Win32_System_Console",
	"Win32_System_Threading",
	"Win32_System_Memory",
] }

dumpcs-gen.workspace = true
il2cpp.workspace = true