[package]
name = "il2cpp"
edition.workspace = true
version.workspace = true

[dependencies]
windows = { workspace = true, features = [
	"Win32_Foundation",
	"Win32_System_SystemServices",
	"Win32_System_LibraryLoader",
	"Win32_System_Console",
	"Win32_System_Threading",
	"Win32_System_Memory",
	"Win32_System_ProcessStatus"
] }
patternscan = "1.2.0"
rayon = "1.11.0"
